# command-line-chat

./: README.md  index.html
clc-client/: Cargo.toml  command-help.md
clc-client/src/: client.rs  input_handler.rs  main.rs  web_client.rs  ws_client.rs
clc-client/testing/: curl.md  test-client.py
clc-lib/: Cargo.toml
clc-lib/src/: lib.rs  protocol.rs  validator.rs
clc-server/: Cargo.toml  index_loader.html
clc-server/src/: chat.rs  handler.rs  main.rs  ws.rs
render_cloud/: api_url.txt
